--- a/src/pages/css/Register.css
+++ b/src/pages/css/Register.css
@@ -1,39 +1,83 @@
 .form-label {
-    position: absolute;
-    margin-top: 1rem;
-    margin-left: 0.7rem;
-    transition: all 0.3s ease-out;
-    pointer-events: none;
-    color: rgb(239, 117, 117);
+  position: absolute;
+  margin-top: 1rem;
+  margin-left: 0.7rem;
+  transition: all 0.3s ease-out;
+  pointer-events: none;
+  color: rgb(239, 117, 117);
+}
 
-  }
-  
-  .focused .form-label {
-    transform: translateY(-1.5rem);
-    font-size: 1rem;
-    color: #7352c7;
-    font-weight: 600;
-  }
-  
-  .form-control {
-    padding-top: 2rem; /* Adjust the padding based on your design */
-  }
-  
+.focused .form-label {
+  transform: translateY(-1.5rem);
+  font-size: 1rem;
+  color: #7352c7;
+  font-weight: 600;
+}
 
+.form-control {
+  padding-top: 2rem; /* Adjust the padding based on your design */
+}
 
+.eye-icon {
+  position: absolute;
+  top: 43%;
+  right: 31%;
+  transform: translateY(-50%);
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
 
-  .btn-hover-effect{
-    font-size: 1.4rem;
-    font-family: NoirPro, Arial;
-    background: #7352C7;
-    outline: none;
-    border: none;
-    color: white;
-    transition: all 0.5s;
+.eye-icon svg {
+  width: 20px; 
+  height: auto;
+  color: #333;
+  background-color: transparent;
+  transition: color 0.3s ease; 
+}
+
+.eye-icon:hover svg {
+  color: #666;
+}
+
+.btn-hover-effect {
+  font-size: 1.4rem;
+  font-family: NoirPro, Arial;
+  background: #7352c7;
+  outline: none;
+  border: none;
+  color: white;
+  transition: all 0.5s;
+}
+
+.btn-hover-effect:hover {
+  border: 2px solid #7352c7;
+  background: white;
+  color: #7352c7;
+}
+
+.anima-img {
+  animation: img 2s cubic-bezier(0.68, -0.55, 0.265, 1.55) forwards;
+}
+
+.anima-form {
+  animation: forms 2s cubic-bezier(0.68, -0.55, 0.265, 1.55) forwards;
+}
+
+@keyframes img {
+  0% {
+    transform: translateX(-100%);
   }
-
-  .btn-hover-effect:hover{
-    border : 2px solid #7352C7;
-    background: white;
-    color: #7352C7;
+  100% {
+    transform: translateX(0%);
   }
+}
+
+@keyframes forms {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
