--- a/src/pages/css/Register.css
+++ b/src/pages/css/Register.css
@@ -47,13 +47,14 @@
   outline: none;
   border: none;
   color: white;
-  transition: all 0.5s;
+  transition: 0.1 ease-in-out;
 }
 
 .btn-hover-effect:hover {
   border: 2px solid #7352c7;
   background: white;
   color: #7352c7;
+  transition: all 0.2s ease-in-out;
 }
 
 .anima-img {
