--- a/src/pages/css/Register.css
+++ b/src/pages/css/Register.css
@@ -41,12 +41,13 @@
 }
 
 .btn-hover-effect {
-  font-size: 1.4rem;
+  font-size: 1rem;
   font-family: NoirPro, Arial;
   background: #7352c7;
   outline: none;
   border: none;
   color: white;
+  font-weight: bold;
   transition: 0.1 ease-in-out;
 }
 
