--- a/src/pages/css/Register.css
+++ b/src/pages/css/Register.css
@@ -58,6 +58,10 @@
   transition: all 0.2s ease-in-out;
 }
 
+.icon-hover:hover{
+  background: #fff;
+}
+
 .anima-img {
   animation: img 2s cubic-bezier(0.68, -0.55, 0.265, 1.55) forwards;
 }
@@ -83,3 +87,5 @@
     transform: translateY(0%);
   }
 }
+
+
